tests/fixtures/invalid/pow_4_args.py
# pow() takes at most 3 arguments, got 4
x = pow(1, 1, 1, 1)
